--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -5,125 +7,6 @@
   font-family: sans-serif;
 }
 
-.main {
-  background: #e8e4db;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  z-index: -2;
-  padding: 32px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.main::before {
-  content: "";
-  background: #372a72;
-  width: 30vw;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.card-background {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  flex: 1;
-}
-
-#form {
-  display: flex;
-  flex-direction: column;
-  margin-top: 50px;
-  max-width: 700px;
-  gap: 1rem;
-}
-
-.info-card {
-  display: flex;
-  flex-direction: column;
-}
-
-.info-card p {
-  padding: 4px;
-  font-weight: 700;
-  font-size: 1.2rem;
-  color: rgb(48, 48, 48);
-}
-
-.info-card input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 4px;
-  border: none;
-  outline: none;
-  box-shadow: 0 0 3px rgb(34, 34, 34);
-}
-
-.date-info {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-  width: 100%;
-}
-
-.date-info {
-  width: 100%;
-}
-
-.date {
-  width: 100%;
-}
-
-.date-inputs {
-  display: flex;
-  gap: 1rem;
-}
-
-.button-verify {
-  padding: 20px;
-  width: 100%;
-  margin: 20px auto;
-  border-radius: 7px;
-  border: none;
-  outline: none;
-  font-size: 1.2rem;
-  color: #fff;
-  background-color: #372a72;
-  box-shadow: 0 0 5px #222;
-  font-weight: 600;
-  letter-spacing: 2px;
-  cursor: pointer;
-  transition: filter 0.4s ease-in-out;
-}
-
-.button-verify:hover {
-  filter: brightness(1.2);
-}
-
-@media (max-width: 1300px) {
-  .card-background {
-    display: none;
-  }
-
-  .container-main{
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .main, .info-card p{
-    color: #000;
-  }
-
-  .main::before{
-    background: none;
-  }
+body {
+  font-family: "Roboto", sans-serif;
 }
